--- a/requirements.txt
+++ b/requirements.txt
@@ -43,13 +43,15 @@ pygame==2.1.2
 pylint==2.10.2
 pyTelegramBotAPI==4.4.0
 python-dateutil==2.8.2
+python-decouple==3.6
+python-dotenv==0.19.2
 python-telegram-bot==13.11
 pytz==2021.3
 pytz-deprecation-shim==0.1.0.post0
 requests==2.26.0
 six==1.16.0
 soupsieve==2.2.1
-telebot==0.0.4
+telegram==0.0.1
 termcolor==1.1.0
 toml==0.10.2
 tornado==6.1
